scss/styles.scss
// Override Bootstrap's Sass default variables
//
// Nearly all variables in Bootstrap are written with the `!default` flag.
// This allows you to override the default values of those variables before
// you import Bootstrap's source Sass files.
//
// Overriding the default variable values is the best way to customize your
// CSS without writing _new_ styles. For example, you can either change
// `$body-color` or write more CSS that override's Bootstrap's CSS like so:
// `body { color: red; }`.


//
// Bring in Bootstrap
//

// Option 1
//
// Import all of Bootstrap's CSS
@import url('https://fonts.googleapis.com/css2?family=Commissioner:wght@100..900&display=swap');

// @import "bootstrap/scss/bootstrap";

// Option 2
//
// Place variable overrides first, then import just the styles you need. Note that some stylesheets are required no matter what.
$primary: #FFBC26;

// Toggle global options
$enable-gradients: true;
$enable-shadows: true;

$offcanvas-box-shadow: 0 1rem 3rem rgba(0, 0, 0, .175);

// Include functions first
@import "bootstrap/scss/functions";

// Customize some defaults
$body-color: #333;
$body-bg: #fff;
$border-radius: .4rem;
$success: #7952b3;

// Required
@import "bootstrap/scss/variables";
@import "bootstrap/scss/variables-dark";
@import "bootstrap/scss/maps";
@import "bootstrap/scss/mixins";
@import "bootstrap/scss/utilities";
@import "bootstrap/scss/root";
@import "bootstrap/scss/reboot";

@import "bootstrap/scss/type";
@import "bootstrap/scss/images";
@import "bootstrap/scss/containers";
@import "bootstrap/scss/grid";
@import "bootstrap/scss/tables";
@import "bootstrap/scss/forms";
@import "bootstrap/scss/buttons";
@import "bootstrap/scss/transitions";
@import "bootstrap/scss/dropdown";
@import "bootstrap/scss/button-group";
@import "bootstrap/scss/nav";
@import "bootstrap/scss/navbar"; // Requires nav
@import "bootstrap/scss/card";
@import "bootstrap/scss/breadcrumb";
@import "bootstrap/scss/accordion";
@import "bootstrap/scss/pagination";
@import "bootstrap/scss/badge";
@import "bootstrap/scss/alert";
@import "bootstrap/scss/progress";
@import "bootstrap/scss/list-group";
@import "bootstrap/scss/close";
@import "bootstrap/scss/toasts";
@import "bootstrap/scss/modal"; // Requires transitions
@import "bootstrap/scss/tooltip";
@import "bootstrap/scss/popover";
@import "bootstrap/scss/carousel";
@import "bootstrap/scss/spinners";
@import "bootstrap/scss/offcanvas"; // Requires transitions
@import "bootstrap/scss/placeholders";

// Helpers
@import "bootstrap/scss/helpers";

// Utilities
@import "bootstrap/scss/utilities/api";


//
// Custom styles
//

@import "icon-list";

body {
  padding: 0;
  overflow-x: hidden;
}

h1 {
  margin-bottom: 10px;
  font-size: 3.6rem;
  line-height: 1.1;
}

h2 {
  font-size: 2.8rem;
}

h1, h2 {
  font-family: 'Commissioner', sans-serif;
}

h1, h2, h3, h4 {
  font-weight: 700;
  color: #000;
}

.navbar {
  margin-bottom: 0!important;

  &__container {
    max-width: 1320px;
    padding-right: 6px;

    @include media-breakpoint-up(sm) {
      padding-left: 15px;
      padding-right: 15px;
    }

    .navbar__photo {
      img {
        width: 40px;
        height: 40px;
        border-radius: 50%;
      }
    }

    .navbar__name-mobile {
      font-size: 16px;
      font-weight: 600;

      @include media-breakpoint-up(md) {
        display: none;
      }
    }

    .navbar__toggler {
      padding-left: 8px;
      padding-right: 8px;
      border: none;
    }

    .navbar__menu {
      font-size: 1rem;

      @include media-breakpoint-up(xl) {
        font-size: 1.25rem;
      }

      li {
        padding-bottom: 0;
        list-style-type: none;
        margin-bottom: -1px;

        .nav-link {
          &__name {
            display: none;

            @include media-breakpoint-up(xxl) {
              display: block;
            }
          }

          &.active {
            font-weight: 600;
          }
        }
      }

      .navbar__email {
        display: flex;

        @include media-breakpoint-up(lg) {
          display: flex;
          font-size: 1rem;
        }

        @include media-breakpoint-up(xl) {
          font-size: 1.25rem;
        }

        .nav-link {
          display: flex;
          flex-direction: row;
          color: var(--bs-navbar-color);

          &__icon {
            margin-right: 6px;

              svg {
              position: relative;
              top: -1px;
              fill: currentColor;
              width: 1.25rem;
              transform: scale(1);


              @include media-breakpoint-up(md) {
                transform: scale(1.2);
              }

              @include media-breakpoint-up(lg) {
                transform: scale(1);
              }
            }
          }

          &__email-full {
            display: block;

            @include media-breakpoint-up(md) {
              display: none;
            }

            @include media-breakpoint-up(lg) {
              display: block;
            }
          }

          &__email-short {
            display: none;

            @include media-breakpoint-up(lg) {
              display: none;
            }
          }
        }
      }
    }
  }
}

.head {
  &__container {
    padding-top: 16px !important;

    @include media-breakpoint-up(sm) {
      padding-top: 24px;
      padding-left: 15px;
      padding-right: 15px;
    }

    @include media-breakpoint-up(md) {
      padding-top: 32px;
    }

    @include media-breakpoint-down(xl) {
      max-width: 100%;
    }

    @include media-breakpoint-down(xxl) {
      max-width: 1320px;
    }

    a {
      color: var(--bs-body-color);

      &.underline {
        text-decoration: none;
        border-bottom: 1px solid rgba($body-color, 0.3);
      }
    }

    .head__text {
      margin-bottom: 2rem!important;

      @include media-breakpoint-up(md) {
        margin-bottom: 3rem!important;
      }
    }

    .head__title {
      font-size: 2.2rem;

      @include media-breakpoint-up(md) {
        font-size: 3.6rem;
        line-height: 1.1;
      }
    }

    .head__lead {
      font-size: 1.25rem;

      @include media-breakpoint-up(md) {
        font-size: 1.5rem;
        font-weight: normal;
      }
    }

    .head__photo {
      display: flex;
      align-self: stretch;
      flex-grow: 1;

      img {
        align-self: flex-end;
        width: 100%;
        max-width: 500px;
        margin-left: auto;
        margin-right: auto;

        @include media-breakpoint-up(lg) {
          width: initial;
          max-height: 545px;
          max-width: 919px;
          position: relative;
          bottom: 15px;
          left: -10vw;
        }

        @include media-breakpoint-up(xxl) {
          bottom: -15px;
        }
      }
    }
  }
}

.skills__item {
  .skills__container {
    @include media-breakpoint-up(sm) {
      padding-left: 15px;
      padding-right: 15px;
    }

    @include media-breakpoint-down(xl) {
      max-width: 100%;
    }

    @include media-breakpoint-down(xxl) {
      max-width: 1320px;
    }

    .skills__text {
      width: 100%;
      max-width: 840px;

      &--fluid {
        @include media-breakpoint-up(lg) {
          width: 40%;
        }

        @include media-breakpoint-up(xl) {
          width: 37%;
        }
      }

      .skills__heading {
        font-size: 2rem;

        @include media-breakpoint-up(md) {
          font-size: 2.8rem;
        }
      }
    }

    .skills__image {
      @include media-breakpoint-down(lg) {
        width: 100%;
      }
    }
  }

  &--accessibility {
    .skills__text--fluid {
      flex-grow: 1;
      @include media-breakpoint-up(lg) {
        width: 40% !important;
      }

      @include media-breakpoint-up(xl) {
        width: 40% !important;
      }
    }
    .skills__image {
      width: 50%;
    }
  }
}

.works {
  .works__container {
    @include media-breakpoint-up(sm) {
      padding-left: 15px;
      padding-right: 15px;
    }

    @include media-breakpoint-down(xl) {
      max-width: 100%;
    }

    @include media-breakpoint-down(xxl) {
      max-width: 1320px;
    }

    .works__image {
      &--docs {
        .image_link {
          background-color: #1B6AB3 !important;
          outline: 1px solid rgba(0, 0, 0, .1) !important;
          outline-offset: -1px;
        }
      }

      &--sc {
        .image_link {
          background-color: #647086 !important;
          outline: 1px solid rgba(0, 0, 0, .1) !important;
          outline-offset: -1px;
        }
      }

      &--xaf {
        .image_link {
          background-color: #FF9914 !important;
          outline: 1px solid rgba(0, 0, 0, .1) !important;
          outline-offset: -1px;
          align-items: center !important;

          img {
            width: 180px !important;
            height: 180px !important;
          }
        }
      }

      &--cloud4rpi {
        .image_link {
          background-color: #00A9EF !important;
          outline: 1px solid rgba(0, 0, 0, .1) !important;
          outline-offset: -1px;
          align-items: center !important;

          img {
            width: 198px !important;
            height: 145px !important;
          }
        }
      }

      &--localization {
        .image_link {
          background-color: #FF7200 !important;
          outline: 1px solid rgba(0, 0, 0, .1) !important;
          outline-offset: -1px;
          align-items: center !important;

          img {
            width: 208px !important;
            height: 155px !important;
          }
        }
      }

      &--blazor {
        .image_link {
          background-image: url("/images/1x/work-preview-blazor-bg.png") !important;
          background-size: cover !important;
          outline: 1px solid rgba(255, 255, 255, .1) !important;
          outline-offset: -1px;
        }
      }

      .image_link {
        background: #F3F4F6;
        width: 414px;
        height: 259px;
        border-radius: 12px;
        display: flex;
        justify-content: center;
        padding: 10px 10px 0;
        align-items: flex-end;

        img {
          width: 320px;
          height: 230px;
        }
      }

      .works__caption {
        margin-top: 8px;
        text-align: left !important;

        a {
          color: var(--bs-body-color);
          font-weight: 600;

          &.underline {
            text-decoration: none;
            border-bottom: 1px solid rgba($body-color, 0.3);
          }
        }
      }
    }

  }

  .works__text {
    width: 100%;
    max-width: 840px;
  }

  .works__heading {
    font-size: 2rem;

    @include media-breakpoint-up(md) {
      font-size: 2.8rem;
    }
  }
}

.bd-masthead {
  background-color: $primary;
}

p {
  margin-top: 0;
  font-size: 1.25rem;

  &.lead {
    font-size: 1.5rem;
    margin-bottom: 2rem;
    font-weight: normal;
  }
}

.company-logo {
  padding-left: 3px;
  padding-right: 6px;
  margin-top: -6px;
}

